# cucumber-thirtyfour-worlder

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  README.tpl  lychee.toml
.github/actions/get-version/: action.yml
.github/workflows/: ci.yml
docref/: Cargo.toml
docref/src/: lib.rs
src/: lib.rs  tests.rs
