[package]
name = "cucumber-thirtyfour-worlder-docref"
description = "Reference for documentation of cucumber-thirtyfour-worlder."
version = "0.1.5"
edition = "2024"
license = "MIT"

[dependencies]
cucumber = "0.21"
thirtyfour = "0.35"
cucumber-thirtyfour-worlder = { path = ".." }

[lints]
workspace = true
